# microplastic

./: hx711_v2.py
mcu/: main.py  main_sim.py
scale_interface/: CMakeLists.txt  main.cpp  scale_interface.cpp  scale_interface.h
